--- a/theory_xtal.tex
+++ b/theory_xtal.tex
@@ -6,7 +6,7 @@
 %
 
 % ------------------------------------------------------------------------------------------------------------------------------------
-\section{Fractional Coordinates}
+\section{Fractional crystal coordinates}
 
 The UB matrix formalism to convert between relative lattice units and laboratory or instrument coordinates is described in \cite{Lumsden2005}.
 
@@ -15,7 +15,7 @@ The UB matrix formalism to convert between relative lattice units and laboratory
 	\includegraphics[width = 0.2 \textwidth]{figures/cell}
 \end{center}
 
-\subsection*{Basic Properties}
+\subsection*{Basic properties}
 
 From the cosine theorem we get:
 \begin{equation} \left< a | b \right > = ab \cos \gamma, \label{ab} \end{equation}
@@ -23,14 +23,13 @@ From the cosine theorem we get:
 \begin{equation} \left< b | c \right > = bc \cos \alpha. \label{bc} \end{equation}
 
 
-\subsection*{Basis Vectors}
 
-We first choose $\left| a \right>$ along $x$,
-\begin{equation} \boxed{ \left| a \right> = \left( \begin{array}{c} a_1 = a \\ 0 \\ 0 \end{array} \right), } \label{avec} \end{equation}
-$\left| b \right>$ in the $xy$ plane,
-\begin{equation} \left| b \right> = \left( \begin{array}{c} b_1 \\ b_2 \\ 0 \end{array} \right), \end{equation}
-and $\left| c \right>$ in general:
-\begin{equation} \left| c \right> = \left( \begin{array}{c} c_1 \\ c_2 \\ c_3 \end{array} \right). \end{equation}
+\subsection*{Basis vectors}
+
+We first choose $\left| a \right>$ along $x$, $\left| b \right>$ in the $xy$ plane, and and $\left| c \right>$ in general:
+\begin{equation} \boxed{ \left| a \right> = \left( \begin{array}{c} a_1 = a \\ 0 \\ 0 \end{array} \right), }
+\hspace{0.5cm} \left| b \right> = \left( \begin{array}{c} b_1 \\ b_2 \\ 0 \end{array} \right),
+\hspace{0.5cm} \left| c \right> = \left( \begin{array}{c} c_1 \\ c_2 \\ c_3 \end{array} \right). \end{equation}
 
 
 Inserting $\left| a \right>$ and $\left| b \right>$ into Eq. \ref{ab} gives:
@@ -71,7 +70,7 @@ The last component, $c_3$, can be obtained from the vector length normalisation,
 	c \cdot \cos \beta \\
 	c \cdot \frac{\cos \alpha - \cos \gamma \cos \beta}{\sin \gamma} \\
 	c \cdot \sqrt{ 1 - \cos^2 \beta - \left(\frac{\cos \alpha - \cos \gamma \cos \beta}{\sin \gamma} \right)^2 }
-\end{array} \right). } \label{avec} \end{equation}
+\end{array} \right). } \end{equation}
 
 
 
@@ -86,25 +85,20 @@ The crystallographic $A$ matrix, which transforms real-space fractional to lab c
 The $B$ matrix, which transforms reciprocal-space relative lattice units (rlu) to lab coordinates (1/\AA), is:
 \begin{equation} B = 2 \pi A^{-t}, \end{equation}
 where $-t$ denotes the transposed inverse.
-The metric tensor corresponding to the coordinate system defined by the $B$ matrix is:
+The metric tensor corresponding to the coordinate system defined by the $B$ matrix is \cite[p. 808]{Arens2015}:
 \begin{equation} \left(g_{ij}\right) = \left<\bm{b_i} | \bm{b_j} \right> = B^T B, \end{equation}
 where the reciprocal basis vectors $\left| \bm{b_i} \right>$ form the columns of $B$.
 
 
-\subsection*{Example: Lengths and Angles in the Reciprocal Lattice}
+\subsection*{Example: lengths and angles in the reciprocal lattice}
 Having a metric makes it straightforward to calculate lengths and angles.
-The length of a reciprocal lattice vector $\left| G \right>$ seen from the lab system is (in 1/\AA{} units):
+The length of a reciprocal lattice vector $\left| G \right>$ seen from the lab system is (in 1/\AA{} units) \cite[p. 808]{Arens2015}:
 \begin{equation}
 	\left\Vert \left< G | G \right> \right\Vert = \sqrt{\left< G | G \right>} = \sqrt{G_i G^j} = \sqrt{g_{ij} G^i G^j}.
 \end{equation}
-The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \right>$ is given by their dot product:
+The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \right>$ is given by their dot product \cite[p. 808]{Arens2015}:
 \begin{equation}
-	\frac{\left< G | H \right>}{\left\Vert \left< G | G \right> \right\Vert \cdot \left\Vert \left< H | H \right> \right\Vert} = \cos \theta,
-\end{equation}
-%\begin{equation}
-%	\frac{G_i H^j }{\left\Vert \left< G | G \right> \right\Vert \cdot \left\Vert \left< H | H \right> \right\Vert} = \cos \theta,
-%\end{equation}
-\begin{equation}
+	\frac{\left< G | H \right>}{\left\Vert \left< G | G \right> \right\Vert \cdot \left\Vert \left< H | H \right> \right\Vert} = 
 	\frac{g_{ij} G^i H^j }{\sqrt{g_{ij} G^i G^j} \sqrt{g_{ij} H^i H^j}} = \cos \theta.
 \end{equation}
 
@@ -115,7 +109,7 @@ The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \rig
 
 
 % ------------------------------------------------------------------------------------------------------------------------------------
-\section{TAS Angles and Scattering Triangle}
+\section{TAS angles and scattering triangle}
 \begin{figure}
 \begin{center}
 	\includegraphics[width = 0.5 \textwidth]{figures/tas}
@@ -125,7 +119,8 @@ The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \rig
 \caption{Triple-axis layout and scattering triangle.}
 \end{figure}
 
-\subsection*{Monochromator Angles $a_1$, $a_2$ and Analyser Angles $a_5$, $a_6$}
+
+\subsection*{Monochromator angles $a_1$, $a_2$ and Analyser Angles $a_5$, $a_6$}
 
 The monochromator (and analyser) angles follow directly from Bragg's equation:
 \begin{equation} 2 d_{m,a}\sin a_{1,5} = n \lambda_{i,f}, \end{equation}
@@ -135,7 +130,8 @@ The monochromator (and analyser) angles follow directly from Bragg's equation:
 Fulfilling the Bragg condition, the angles $a_2$ and $a_6$ are simply: $a_{2,6} = 2 \cdot a_{1,5}.$
 
 
-\subsection*{Scattering Angle $a_4$}
+
+\subsection*{Scattering angle $a_4$}
 
 \begin{equation} \left| Q \right> = \left| k_i \right> - \left| k_f \right> \\ \end{equation}
 \begin{equation} \left< Q | Q \right> = \left( \left< k_i \right| - \left< k_f \right| \right) \cdot \left( \left| k_i \right> - \left| k_f \right> \right) \end{equation}
@@ -147,7 +143,8 @@ The sign of $a_4$ is given by the sample scattering sense $\sigma_s = \pm 1$.
 
 
 
-\subsection*{Rocking Angle $a_3$}
+
+\subsection*{Rocking angle $a_3$}
 
 \begin{equation} \boxed{ a_3 = 180^{\circ} - \left( \psi + \xi \right) } \end{equation}
 
@@ -163,8 +160,9 @@ Angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$, in units of \A
 
 \subsubsection*{Angle $\xi$}
 Angle $\xi$ between $\left| Q \right>$ and orientation vector $\left| a \right>$ (i.e. $ax$, $ay$, $az$), in units of rlu:
-\begin{equation} \xi = \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ \left< Q | a \right> }{ \sqrt{\left< Q | Q \right>} \sqrt{\left< a | a \right>} } \right) \end{equation}
-\begin{equation} \boxed{ \xi = \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ Q^i g_{ij} a^j }{ \sqrt{Q^i g_{ij} Q^j} \sqrt{a^i g_{ij} a^j} } \right) } \end{equation}
+\begin{equation} \boxed{ \xi = 
+\sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ \left< Q | a \right> }{ \sqrt{\left< Q | Q \right>} \sqrt{\left< a | a \right>} } \right) = 
+\sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ Q^i g_{ij} a^j }{ \sqrt{Q^i g_{ij} Q^j} \sqrt{a^i g_{ij} a^j} } \right) } \end{equation}
 
 The sign, $\sigma_{\mathrm{side}}$, of $\xi$ depends on which side of the orientation vector $\left| a \right>$ the scattering vector $\left| Q \right>$ 
 is located. The sign can be found by calculating the (covariant) cross product of $\left| a \right>$ and $\left| Q \right>$ to give an out-of-plane vector 
