--- a/thesis.bib
+++ b/thesis.bib
@@ -29,6 +29,30 @@
 }
 
 
+@book
+{
+	Arens2015,
+	author = {Arens, T. and Hettlich, F. and Karpfinger, C. and Kockelkorn, U. and Lichtenegger, K. and Stachel, H.},
+	title = {{Mathematik, 3. Auflage}},
+	year = {2015},
+	publisher = {Springer-Verlag GmbH Berlin Heidelberg, Germany},
+	isbn = {978-3-642-44919-2},
+	doi = {10.1007/978-3-642-44919-2}
+}
+
+
+@book
+{
+	Arfken2013,
+	author = {Arfken, G. B. and Weber, H. J. and Harris, F. E.},
+	title = {{Mathematical Methods for Physicists, A Comprehensive Guide, Seventh Edition}},
+	year = {2013},
+	publisher = {Academic Press / Elsevier, USA, UK},
+	isbn = {978-0-12-384654-9},
+	doi = {10.1016/C2009-0-30629-7}
+}
+
+
 @article
 {
 	Lumsden2005,
