updates to xtal theory

--- a/thesis.bib
+++ b/thesis.bib
@@ -96,7 +96,9 @@
 }
 
 
-@article{thales,
+@article
+{
+	thales,
 	author = {M. B\"ohm and P. Steffens and J. Kulda and M. Klicpera and S. Roux and P. Courtois and P. Svoboda and J. Saroun and V. Sechovsky},
 	title = {{ThALES -- Three Axis Low Energy Spectroscopy for highly correlated electron systems}},
 	journal = {Neutron News},
@@ -110,9 +112,11 @@
 }
 
 
-@misc{wiki_fractional,
+@misc
+{
+	wiki_fractional,
 	author = "{Wikipedia contributors}",
-	title = "Fractional coordinates --- {Wikipedia}{,} The Free Encyclopedia",
+	title = "Fractional coordinates -- {Wikipedia}{,} The Free Encyclopedia",
 	year = "2020",
 	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
 	note = "[Online; accessed 1-February-2021]"
