started with intro

--- a/abstract.tex
+++ b/abstract.tex
@@ -5,6 +5,9 @@
 % @license see 'LICENSE' file
 %
 
+\chapter*{Abstract}
+\addcontentsline{toc}{chapter}{Abstract}
+
 The triple-axis spectrometer (TAS) \cite{Shirane2002} was invented by B. Brockhouse in the 1950s and 
 is among the foremost measurement methods in the field of inelastic neutron scattering. 
 It enables the probing of vibrational (phonon) or magnetic (magnon) excitations in single crystals and allows 
