--- a/intro.tex
+++ b/intro.tex
@@ -1,1 +1,15 @@
-TODO: Intro.
+Neutron triple-axis spectrometers (TAS) are one of the fundamental types of instruments in the field of neutron scattering at research reactors. The goal of this work is the design and implementation of software tools which enable an automatic path finding for TAS instruments. Automatic path finding is necessary for the instrument to circumvent obstacles in its path. The methods in this work are part of the current drive towards autonomous experimentation.
+
+In this chapter, we introduce the concepts of neutron scattering and shortly present the different types of instruments typically found at a research reactor (Sec. \ref{sec:scattering}). A special emphasis is put on triple-axis spectroscopy as they are the technique we are interested here (Sec. \ref{sec:scattering}). Finally, we summarise the current state of autonomous experimentation (Sec. \ref{sec:autonomous}).
+
+
+
+\section{Neutron scattering \label{sec:scattering}}
+
+
+
+\section{Triple-axis spectrometers \label{sec:tas}}
+
+
+
+\section{Autonomous experiments \label{sec:autonomous}}
