--- a/publications.tex
+++ b/publications.tex
@@ -1,1 +1,5 @@
-TODO: Publications.
+\chapter{List of publications}
+The latest list of publications can be found on-line under \url{https://orcid.org/0000-0002-7230-1932}. 
+We reproduce the current version in the following.
+
+TODO
