--- a/theory_xtal.tex
+++ b/theory_xtal.tex
@@ -6,6 +6,7 @@
 %
 
 % ------------------------------------------------------------------------------------------------------------------------------------
+
 \section{Fractional crystal coordinates}
 
 The UB matrix formalism to convert between relative lattice units and laboratory or instrument coordinates is described in \cite{Lumsden2005}. The derivation of the transformation matrix for fractional coordinates can be found in \cite{wiki_fractional}.
@@ -119,7 +120,7 @@ The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \rig
 
 
 % ------------------------------------------------------------------------------------------------------------------------------------
-\section{TAS angles and scattering triangle}
+\section{Scattering triangle and TAS angles}
 
 The derivation of basic scattering geometries in triple-axis spectrometers can be found in \cite[Ch. 1.3]{Shirane2002}.
 
