--- a/thesis.bib
+++ b/thesis.bib
@@ -53,6 +53,18 @@
 }
 
 
+@book
+{
+	Jacrot2021,
+	author = {Jacrot, B.},
+	editor = {Filhol, A.},
+	title = {{Neutrons for Science: The history of the Institut Laue-Langevin, an exceptionally successful international cooperation}},
+	year = {2021},
+	publisher = {EDP Sciences, France},
+	isbn = {978-2-7598-2187-7},
+}
+
+
 @article
 {
 	Lumsden2005,
