--- a/intro.tex
+++ b/intro.tex
@@ -4,12 +4,10 @@ In this chapter we introduce the concepts of neutron scattering and shortly pres
 
 \section{Neutron scattering \label{sec:scattering}}
 
-The history of neutron physics begins in 1932 with the discovery of the neutron by James Chadwick, who used alpha particles (helium nuclei) to bombard a beryllium-9 sample, producing carbon-12 and a neutron per reaction \cite[p.1]{Jacrot2021}. 
-In 1939, Otto Hahn used the same kind of neutron source to irradiate uranium-235 in an attempt to produce trans-uranium elements \cite{TODO}. But instead of heavier elements, the experiment yielded lighter elements, which was interpreted by Lise Meitner as a splitting of the uranium nucleus, the discovery of nuclear fission \cite{TODO}. A typical fission reaction is
-TODO ,
-where two to three neutrons are produces by each reaction in addition to the daughter nuclei.
-In 1942, Enrico Fermi made use of these excess neutrons to produce a continuous nuclear fission chain reaction \cite[p.1]{Jacrot2021} in the first artificial nuclear reactor, the \textit{Chicago Pile-1} \footnote{Note that \textit{Chicago Pile-1} was the first \textit{artificial} nuclear reactor, the first \textit{natural} reactor was discovered to having run in Oklo, Gabun. \cite{TODO}}.
-The first research reactor at a power of 3.5 MW was built in Oak Ridge, USA in 1943 \cite[p.3]{Jacrot2021}. Here, first neutron scattering experiments were performed by Clifford Shull using a two-axis diffractometer \cite[p.3]{Jacrot2021}.
+The history of neutron physics begins in 1932 with the discovery of the neutron by James Chadwick, who used alpha particles (helium nuclei) to bombard a beryllium-9 sample, producing carbon-12 and one neutron per reaction \cite[p.1]{Jacrot2021}. 
+In 1939, Otto Hahn used the same kind of neutron source to irradiate uranium-235 in an attempt to produce trans-uranium elements \cite{wiki_fission}. But instead of heavier elements, the experiment yielded lighter elements, which was interpreted by Lise Meitner as a splitting of the uranium nucleus, the discovery of nuclear fission \cite{wiki_fission}. A typical fission reaction is the decay of uranium-235 into baryum-144 and krypton-89, where two to three neutrons are produces by each reaction in addition to the daughter nuclei \cite{wiki_fission}.
+In 1942, Enrico Fermi made use of these excess neutrons to produce a continuous nuclear fission chain reaction \cite[p.1]{Jacrot2021} in the first artificial nuclear reactor, the \textit{Chicago Pile-1}~\footnote{Note that \textit{Chicago Pile-1} was the first \textit{artificial} nuclear reactor. The first \textit{natural} reactor was discovered to have run more that 1.5 billion years ago in Oklo, Gabun, at an average power of about 100 kW for a period of half a million years \cite{wiki_oklo}.}.
+The first research reactor at a power of 3.5 MW~\footnote{As research reactors do not produce electricity, the given numbers refer to thermal powers.} was built in Oak Ridge, USA in 1943 \cite[p.3]{Jacrot2021}. Here, first neutron scattering experiments were performed by Clifford Shull using a two-axis diffractometer \cite[p.3]{Jacrot2021}.
 
 
 \section{Triple-axis spectrometers \label{sec:tas}}
