--- a/thesis.bib
+++ b/thesis.bib
@@ -127,9 +127,31 @@
 @misc
 {
 	wiki_fractional,
-	author = "{Wikipedia contributors}",
-	title = "Fractional coordinates -- {Wikipedia}{,} The Free Encyclopedia",
+	author = {{Wikipedia contributors}},
+	title = {{Fractional coordinates -- {Wikipedia}{,} The Free Encyclopedia}},
 	year = "2020",
+	url = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
 	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
 	note = "[Online; accessed 1-February-2021]"
+}
+
+@misc
+{
+	wiki_fission,
+	author = {{Wikipedia contributors}},
+	title = {{Discovery of nuclear fission --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "\url{https://en.wikipedia.org/w/index.php?title=Discovery_of_nuclear_fission&oldid=999630578}",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Discovery_of_nuclear_fission&oldid=999630578}",
+	note = "[Online; accessed 10-February-2021]"
+}
+
+@misc{
+	wiki_oklo,
+	author = {{Wikipedia}},
+	title = {{Naturreaktor Oklo --- Wikipedia{,} Die freie Enzyklop\"adie}},
+	year = "2020",
+	url = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
+	howpublished = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
+	note = "[Online; Stand 10. Februar 2021]"
 }
