continued with intro

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,4 +1,7 @@
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{chapter}{Acknowledgements}
 
-TODO
+\begin{itemize}
+	\item TODO
+	\item TODO
+\end{itemize}
