--- a/thesis.tex
+++ b/thesis.tex
@@ -69,7 +69,7 @@
 \input{errata.tex}
 
 %\section{Bibliography}
-\bibliographystyle{alpha}
+\bibliographystyle{ieeetr}
 \bibliography{\jobname.bib}
 % ====================================================================================================================================
 
