continued with intro

--- a/thesis.bib
+++ b/thesis.bib
@@ -65,6 +65,17 @@
 }
 
 
+@book
+{
+	Stacey2007,
+	author = {Stacey, W. M.},
+	title = {{Nuclear Reactor Physics, Second Edition}},
+	year = {2007},
+	publisher = {Wiley-VCH Verlag GmbH \& Co. KGaA, Weinheim, Germany},
+	isbn = {978-3-527-40679-1},
+}
+
+
 @article
 {
 	Lumsden2005,
