--- a/intro.tex
+++ b/intro.tex
@@ -4,16 +4,18 @@ In this chapter we introduce the concepts of neutron scattering and shortly pres
 
 \section{A brief history of neutron physics \label{sec:neutrons}}
 
-The history of neutron physics begins in 1932 with the discovery of the neutron by James Chadwick, who used alpha particles (helium nuclei) to bombard a beryllium-9 sample, thereby producing carbon-12 and one neutron per reaction \cite[p. 1]{Jacrot2021}. The neutron was found to have a similar mass as the proton ($m_n = 1.675\cdot10^{-27}\,\mathrm{kg}$, $m_p = 1.673\cdot10^{-27}\,\mathrm{kg}$), but, as the name implies, does not possess a charge \cite[p. 2]{Squires2012}. The absence of a charge makes the neutron very useful for science, as it is subject to purely nuclear interactions with other nuclei, without any electrostatic repulsion \cite[p. 1]{Squires2012}.
+The history of neutron physics begins in 1932 with the discovery of the neutron by James Chadwick, who used alpha particles (helium nuclei) to bombard a beryllium-9 sample, thereby producing carbon-12 and one neutron per reaction \cite[p. 1]{Jacrot2021}. The created neutron was found to have a similar mass as the proton ($m_n = 1.675\cdot10^{-27}\,\mathrm{kg}$, $m_p = 1.673\cdot10^{-27}\,\mathrm{kg}$), but, as the name implies, no charge was detected \cite[p. 2]{Squires2012}. The absence of a charge makes the neutron very useful for science, as it is subject to purely nuclear interactions with other nuclei, without any electrostatic repulsion \cite[p. 1]{Squires2012}.
 
-In 1939, Otto Hahn used a Chadwick-type neutron source to irradiate uranium isotopes in an attempt to produce heavy trans-uranium elements \cite{wiki_fission}. But instead of heavier elements, the experiment yielded lighter elements, which was interpreted by Lise Meitner as a splitting of the uranium nucleus, the discovery of nuclear fission \cite{wiki_fission}. A typical possible channel of a fission reaction is the decay of uranium-235 into baryum-144 and krypton-89, where two to three neutrons are produced by each reaction in addition to the daughter nuclei and energy \cite{wiki_fission}.
+In 1939, Otto Hahn used a Chadwick-type neutron source to irradiate uranium isotopes in an attempt to produce heavy trans-uranium elements \cite{wiki_fission}. But instead of heavier elements, the experiment yielded lighter elements, which was interpreted by Lise Meitner as a splitting of the uranium nucleus, which marked the discovery of nuclear fission \cite{wiki_fission}. A typical possible channel of a fission reaction is the decay of uranium-235 into baryum-144 and krypton-89, where two to three neutrons are produced by each reaction in addition to the daughter nuclei and energy \cite{wiki_fission}.
 
-In 1942, Enrico Fermi made use of the excess neutrons that are obtained by each fission reaction to produce a continuous, self-sustaining chain reaction in the first artificial nuclear reactor, the \textit{Chicago Pile-1}~\cite[p.1]{Jacrot2021}~\footnote{Note that \textit{Chicago Pile-1} was the first \textit{artificial} nuclear reactor. The first \textit{natural} reactor was discovered to have run more that 1.5 billion years ago in Oklo, Gabun, at an average power of about 100 kW for a period of half a million years \cite{wiki_oklo}.}.
+In 1942, Enrico Fermi made use of the excess neutrons that are obtained by each fission reaction to produce a continuous, self-sustaining chain reaction in the first artificial nuclear reactor, the \textit{Chicago Pile-1}~\cite[p.1]{Jacrot2021}~\footnote{Note that \textit{Chicago Pile-1} was the first \textit{artificial} nuclear reactor. The first \textit{natural} reactor was discovered to have run more that 1.5 billion years ago in Oklo, Gabun, at an average power of about 100 kW for a period of half a million years \cite{wiki_oklo}!}.
 
 The first research reactor, having a power of 3.5 MW~\footnote{As research reactors do not produce electricity, the given numbers refer to thermal powers.} and being used for studies in solid-state physics, was built in Oak Ridge, USA in 1943, shortly after Fermi's pile \cite[p. 3]{Jacrot2021}. 
 Here, first neutron scattering experiments were performed by Clifford Shull using a two-axis diffractometer \cite[pp. 3, 37]{Jacrot2021}.
 
-Studying the structure and dynamics of crystals is possible, because neutrons emerging from the reactor can be slowed down (moderated) into energy regions where their de Broglie wavelength $\lambda = h/p$, $p$ is the momentum and $h$ Planck's constant, corresponds to typical inter-atomic distances in crystal unit cells, which is of the order of 1 \AA{}ngstr\"om, i.e. $10^{-10}$ m \cite[pp.1,3]{Squires2012}. Such a slowing-down of neutrons is usually performed using a secondary moderator outside the main moderator, which itself sustains the nuclear fission, for example using liquid $\mathrm{D_2O}$ to bring the neutrons into a new thermal equilibrium \cite[p. 82]{Jacrot2021}.
+A selection of research reactors in operation today include the 20 MW \textit{Forschungsreaktor M\"unchen II}\footnote{\url{https://mlz-garching.de}} (FRM-II) at the Heinz-Maier-Leibnitz-Zentrum in Germany, the 20 MW reactor at the NIST Center for Neutron Research\footnote{\url{https://www.nist.gov/ncnr}} (NCNR), the 85 MW \textit{High Flux Isotope Reactor}\footnote{\url{https://neutrons.ornl.gov/hfir}} (HFIR) at the Oak Ridge National Laboratory, both in the United States, and the reactor of the Institut Laue-Langevin\footnote{\url{https://www.ill.eu}} (ILL) in France, which - at 58 MW - is the most powerful neutron source used for science in Europe.
+
+Studying the structure and dynamics of crystals is possible because neutrons emerging from the reactor can be slowed down (moderated) into energy regions where their de Broglie wavelength $\lambda = h/p$ corresponds to typical inter-atomic distances in crystal unit cells, which is of the order of 1 \AA{}ngstr\"om, i.e. $10^{-10}$ m \cite[pp.1,3]{Squires2012}. In the formula, $p$ denotes the momentum and $h$ Planck's constant. Such a slowing-down of neutrons is usually performed using a secondary moderator outside the main moderator, which itself sustains the nuclear fission, for example using liquid $\mathrm{D_2O}$ \cite[p. 82]{Jacrot2021}. Here, neutrons are brought into a new thermal equilibrium by elastic collisions with the nuclei of the moderator's atoms \cite[p. 30]{Stacey2007}, i.e. the neutrons take the temperature and thus energy of the surrounding material.
 
 
 
