--- a/intro.tex
+++ b/intro.tex
@@ -21,7 +21,12 @@ Studying the structure and dynamics of crystals is possible because neutrons eme
 
 \section{Two-axis diffractometers \label{sec:diff}}
 
-A two-axis diffractometer is used for studying the structure of crystals. It is one of the fundamental types of instruments in the field of neutron scattering at research reactors.
+A two-axis diffractometer is used for determining the structure of crystals. It is one of the fundamental types of instruments in the field of neutron scattering at research reactors. This instrument type consists of a single crystal, the monochromator, which picks out one specific wavelength from the polychromatic neutron beam coming from the reactor or from one of its moderators. The physical principle behind wavelength selection is Bragg reflection \cite[p. 68]{Gross2012}, 
+\begin{equation}
+	n \cdot \lambda \ =\  2 d \cdot \sin\left(\theta\right),
+\end{equation}
+with $\lambda$ being the wavelength, $d$ the spacing of the crystal lattice planes and $\theta$ half the scattering angle.
+The resulting monochromatic beam is Bragg-scattered a second time, this time from a sample single-crystal or powder. By the intensity of the sample's different Bragg reflections, the so-called nuclear structure factor can be reconstructed. Absences of Bragg peaks determine the crystal symmetry and its space group.
 
 
 
