--- a/thesis.bib
+++ b/thesis.bib
@@ -55,6 +55,18 @@
 
 @book
 {
+	Gross2012,
+	author = {Gross, R. and Marx, A.},
+	title = {{Festk\"orperphysik}},
+	year = {2012},
+	publisher = {Oldenbourg Wissenschaftsverlag GmbH, Rosenheimer Str. 145, 81671 M\"unchen, Germany},
+	isbn = {978-3-486-71294-0},
+	doi = {}
+}
+
+
+@book
+{
 	Jacrot2021,
 	author = {Jacrot, B.},
 	editor = {Filhol, A.},
