--- a/thesis.tex
+++ b/thesis.tex
@@ -5,7 +5,7 @@
 % @license see 'LICENSE' file
 %
 
-\documentclass[english]{book}
+\documentclass[english, 11pt]{book}
 
 \RequirePackage{fixltx2e}
 \RequirePackage{fix-cm}
