continued with intro

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 %
-% project plan
+% project plan / abstract
 % @author Tobias Weber <tweber@ill.fr>
 % @date jan-2021
 % @license see 'LICENSE' file
