--- a/theory_path.tex
+++ b/theory_path.tex
@@ -1,2 +1,10 @@
+%
+% path optimisation
+% @author Tobias Weber <tweber@ill.fr>
+% @date 2021
+% @license see 'LICENSE' file
+%
+
+
 \section{Optimal instrument path}
 TODO
