--- a/thesis.tex
+++ b/thesis.tex
@@ -65,6 +65,7 @@
 \appendix
 \part{Back matter}
 %\addcontentsline{toc}{part}{Back matter} 
+\input{notation.tex}
 \input{publications.tex}
 \input{errata.tex}
 
