--- a/thesis.bib
+++ b/thesis.bib
@@ -147,6 +147,15 @@
 }
 
 
+@article
+{
+	skxpaper,
+	author = {T. Weber and D. M. Fobes and J. Waizner and P. Steffens and G. S. Tucker and M. B\"ohm and L. Beddrich and C. Franz and H. Gabold and R. Bewley and D. Voneshen and M. Skoulatos and R. Georgii and G. Ehlers and A. Bauer and C. Pfleiderer and P. B\"oni and M. Janoschek and M. Garst},
+	title = {{Emergent Landau levels of magnons in a skyrmion lattice}},
+	note = {in preparation}
+}
+
+
 @misc
 {
 	wiki_fractional,
